# python-pytest-testing-project-79

./: .gitignore  Makefile  README.md  page_loader.py  pyget.py  pyproject.toml
tests/: test_page_loader.py
