[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "pytest project"
authors = ["Valeriy Studennikov <despairr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
